--- a/package.json
+++ b/package.json
@@ -5,25 +5,25 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "npm run watch & nodemon dist/server/index.js",
+		"start": "npm run build && npm run serve",
+		"start:dev": "npm run watch & nodemon dist/server/index.js",
 		"watch": "tsc -w",
 		"build": "tsc",
-		"serve": "node dist/server/server.js"
+		"serve": "node dist/server/index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/express": "^4.17.2",
+		"@types/ws": "^6.0.3",
 		"express": "^4.17.1",
+		"typescript": "^3.6.4",
 		"ws": "^7.2.0"
 	},
 	"devDependencies": {
-		"@types/express": "^4.17.2",
-		"@types/ws": "^6.0.3",
 		"nodemon": "^1.19.4",
-		"prettier": "^1.18.2",
-		"ts-node": "^8.4.1",
-		"typescript": "^3.6.4"
+		"prettier": "^1.18.2"
 	},
 	"prettier": {
 		"semi": false,
@@ -31,5 +31,8 @@
 		"trailingComma": "es5",
 		"useTabs": true,
 		"arrowParens": "always"
+	},
+	"engines": {
+		"node": "12.x"
 	}
 }
