--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "npm run build && npm run serve",
-		"start:dev": "npm run watch & nodemon dist/server/index.js",
+		"dev": "npm run watch & nodemon dist/server/index.js",
 		"watch": "tsc -w",
 		"build": "tsc",
 		"serve": "node dist/server/index.js"
