--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "horice-pause",
+	"name": "videomapping-pause",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"private": true,
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "npm run build && npm run serve",
-		"dev": "npm run watch & nodemon dist/server/index.js",
+		"start": "node dist/server/index.js",
+		"dev": "concurrently npm:watch npm:start-dev",
 		"watch": "tsc -w",
 		"build": "tsc",
-		"serve": "node dist/server/index.js"
+		"start-dev": "nodemon dist/server/index.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -22,6 +22,7 @@
 		"ws": "^7.2.0"
 	},
 	"devDependencies": {
+		"concurrently": "^7.6.0",
 		"nodemon": "^1.19.4",
 		"prettier": "^1.18.2"
 	},
